# memory-profile

./: .env.example  .gitignore  README.md  docker-compose.yml
archive/: build_all.sh  docker-compose.yml  parse_pahole.py  push_metrics.py
archive/memory-dashboard/: index.html  package-lock.json  package.json  vite.config.js
archive/memory-dashboard/src/components/: SizeBreakdown.jsx  StatCard.jsx  StructTree.jsx
archive/memory-dashboard/src/utils/: packer.js
example_project/: CMakeLists.txt
example_project/inc/: example_advanced.h  example_events.h  example_node.h  example_system.h
example_project/src/: example_advanced.cpp  example_events.cpp  example_node.cpp  example_system.cpp  main.cpp
grafana/dashboards/: memory_profile.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: influxdb.yml
memory-dashboard/src/: App.jsx  index.css
memory-dashboard/src/components/: LayoutDiff.jsx  StructTree.jsx  WasteGauge.jsx
tools/: push_metrics.py
tools/memory_analyzer/: analyze_struct.py  auto_scan.sh  cell_trace.gdb.in  heap_tracker.py  remote_trace.gdb.in
